frontend/test/should_pass/global_then_in_package_pattern.grg
#using "model.gm"

pattern P()
{
}

package Foo
{
	// was error: p already defined
	pattern P()
	{
	}
	
	test t()
	{
		p:P();
	}
}

test t()
{
	p:P();
}
