frontend/test/should_fail/recursionOverEmptyPatterns_004.grg
test t
{
	:P();
}

pattern P
{
	:Q();
}

pattern Q
{
	optional {
		:P();
	}
}
